--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
             "@php artisan package:discover"
         ],
         "post-install-cmd": [
-            "@php artisan migrate"
+            "@php artisan migrate --force"
         ]
     },
     "config": {
