--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_HOST_TESTING=localhost
+DB_PORT_TESTING=3306
+DB_DATABASE_TESTING=homestead_testing
+DB_USERNAME_TESTING=homestead
+DB_PASSWORD_TESTING=secret
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
