--- a/composer.json
+++ b/composer.json
@@ -50,9 +50,7 @@
             "@php artisan package:discover"
         ],
         "post-install-cmd": [
-            "@php artisan migrate --force",
-            "chmod -R 777 storage",
-            "@php artisan passport:keys"
+            "@php artisan migrate --force"
         ]
     },
     "config": {
