--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.6.*",
         "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
-        "rap2hpoutre/laravel-log-viewer": "^0.22.0"
+        "rap2hpoutre/laravel-log-viewer": "^0.22.0",
+        "barryvdh/laravel-cors": "^0.11.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
