--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,16 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ranking-mysql
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=ranking
+DB_USERNAME=ranking
 DB_PASSWORD=secret
 
-DB_HOST_TESTING=localhost
-DB_PORT_TESTING=3306
-DB_DATABASE_TESTING=homestead_testing
-DB_USERNAME_TESTING=homestead
+DB_HOST_TESTING=ranking-mysql-test
+DB_PORT_TESTING=3307
+DB_DATABASE_TESTING=ranking
+DB_USERNAME_TESTING=ranking
 DB_PASSWORD_TESTING=secret
 
 BROADCAST_DRIVER=log
