--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
         "rap2hpoutre/laravel-log-viewer": "^0.22.0",
         "barryvdh/laravel-cors": "^0.11.2"
@@ -53,8 +52,7 @@
         ],
         "post-install-cmd": [
             "@php artisan migrate --force",
-            "chmod -R 777 storage",
-            "@php artisan passport:keys"
+            "chmod -R 777 storage"
         ]
     },
     "config": {
